# aixhs666

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_MASTER_PROMPT.md  CLAUDE_WORKER_PROMPT.md  CODEX_START_PROMPT.md  DECISIONS.md  HANDOFF.md  MASTER_CODEX_PROMPT.md  PROJECT_DASHBOARD.md  README.md  TASKS.md  WORKER_CODEX_PROMPT.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  project_manifest.json  pyproject.toml  runtime_env.py
.spark/: meta.json
alembic/: env.py
apps/: cli.py  feishu_task_center_listener.py  operator_gateway.py
collectors/: __init__.py  base.py  mock.py
docs/: ACCEPTANCE_TESTS.md  AGENT_HANDOFF.md  AGENT_INTERFACE.md  ARCHITECTURE.md  COMMENT_REPLY_OPERATIONS.md  CONCURRENCY_POLICY.md  DATA_MODEL.md  FEISHU_CARD_CALLBACK_RUNBOOK.md  FOUNDER_COPILOT.md  FOUNDER_COPILOT_HANDOFF.md  NEW_COMPUTER_SETUP.md  OPERATOR_GATEWAY_RUNBOOK.md  ORCHESTRATION.md  PRD.md  QUALIFICATION_ARCHITECTURE_AUDIT.md  QUERY_SEEDS.md  ROADMAP.md  TASK_PRODUCTIZATION.md  V0_REAL_LOOP_PLAN.md  V0_REAL_LOOP_REPORT.md  V15_AGENT_NEUTRAL_RUNTIME_REPORT.md
integrations/: __init__.py
intelligence/: __init__.py
miaoda-console/: .spark_project  README.md
orchestration/: FILE_LOCKS.md  WORKER_REGISTRY.md
platform_config/: __init__.py  loader.py  models.py  validation.py
scheduler/: __init__.py  task_state_machine.py
scripts/: backfill_location_evidence.py  check_runtime.py  dev.js  e2e_closed_loop.py  export_miaoda_console.sh  install_operator_gateway_launchd.sh  install_skill_run_worker_launchd.sh  run.sh  (+8 more)
(+358 files in other folders)
